# graph-expressiveness-team-6

./: .gitignore  README.md  installAndRun.bat  installAndRun.sh  requirements.txt
advanced_visualizer/: MANIFEST.in  pyproject.toml  requirements.txt
advanced_visualizer/api/: AdvancedVisualizer.py  advanced_visualizer.py
advanced_visualizer/src/advanced_visualizer/: implementation.py
advanced_visualizer/src/templates/: advanced_visualizer.html
advanced_visualizer/templates/: advanced_visualizer.html
api/: graph.py  pyproject.toml
api-sok/: pyproject.toml
api-sok/src/api/components/: data_source.py  visualizer.py
api-sok/src/api/models/: edge.py  graph.py  node.py
api/components/: data_source.py  visualizer.py
api/models/: edge.py  graph.py  node.py
core-sok/: pyproject.toml
core-sok/src/core/: content.py  infrastructure.py  models.py  services.py
core-sok/src/core/filters/: base_filter.py  filter_chain.py  filter_chain_tests.py  filter_pipeline.py  filter_pipeline_tests.py  operator_filter.py  operator_filter_tests.py  search_filter.py  search_filter_tests.py
graph_explorer/: pyproject.toml
graph_explorer/src/graph_explorer/: db.sqlite3  manage.py
graph_explorer/src/graph_explorer/graph_explorer/: asgi.py  settings.py  urls.py  wsgi.py
graph_explorer/src/graph_explorer/graph_visualizer/: apps.py  models.py  services.py  urls.py  views.py
graph_explorer/src/graph_explorer/graph_visualizer/module/: content.py
graph_explorer/src/graph_explorer/graph_visualizer/static/: script.js  style.css
graph_explorer/src/graph_explorer/graph_visualizer/templates/: base.html  bird_view.html  index.html  tree_view.html  workspace_config.html  workspace_edit.html
html_data_source/: html_data_source.py
html_datasource/: pyproject.toml  setup.py
html_datasource/src/: main.py
html_datasource/src/html_datasource/: implementation.py  services.py  utils.py
simple_visualizer/: MANIFEST.in  pyproject.toml
simple_visualizer/src/simple_visualizer/: implementation.py  simple_visualizer.py  simple_visualizer_src.py  simple_visualizer_template.html
simple_visualizer/src/simple_visualizer/templates/: simple_visualizer_template.html
spotify_datasource/: pyproject.toml
spotify_datasource/src/spotify_datasource/: implementation.py  models.py  services.py  utils.py
