[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api","templates"]

[project]
name = "advanced_visualizer"
dynamic = ["version"]
dependencies = [
    "typing-extensions==4.8.0",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.5"
]
requires-python = ">= 3.10"
authors = [
    {name = "Teodor Vidakovic"}
]

[project.entry-points."visualizers"]
advanced_visualizer = "api.advanced_visualizer:AdvancedVisualizer"