[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.10"
authors = [
    {name = "Balsa Bulatović"},
    {name = "Teodor Vidaković"},
    {name = "Vladimir Popov"},
]

[tool.setuptools.package-dir]
api = "./"