[project]
name = "html-datasource"
dynamic = ["version"]
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "selenium==3.3.0",
    "webdriver-manager==4.0.1",
]
requires-python = ">= 3.10"
authors = [
    {name = "Balsa Bulatović"},
]

[project.entry-points."datasources"]
html = "html_datasource.implementation:HtmlDataSource"
