[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_visualizer"
dynamic = ["version"]
dependencies = [
    "typing-extensions==4.8.0",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.5"
]
requires-python = ">= 3.10"
authors = [
    {name = "Momir Milutinović"}
]

[project.entry-points."visualizers"]
simple_visualizer = "simple_visualizer.simple_visualizer_src:SimpleVisualizer"
